# Rebecca

./: CMakeLists.txt  LICENSE  README.md
Source/: Rebecca.cpp
Source/C89/: BuiltinType.cpp  BuiltinType.hpp  CharacterLiteral.cpp  CharacterLiteral.hpp  CompoundStmt.cpp  CompoundStmt.hpp  ConstantArrayType.cpp  ConstantArrayType.hpp  DeclRefExpr.cpp  DeclRefExpr.hpp  FloatingLiteral.cpp  FloatingLiteral.hpp  FunctionDecl.cpp  FunctionDecl.hpp  ImplicitCastExpr.cpp  ImplicitCastExpr.hpp  InitListExpr.cpp  InitListExpr.hpp  IntegerLiteral.cpp  IntegerLiteral.hpp  Location.cpp  Location.hpp  ParenType.cpp  ParenType.hpp  ParmVarDecl.cpp  ParmVarDecl.hpp  Parser.cpp  Parser.hpp  PointerType.cpp  PointerType.hpp  Range.cpp  Range.hpp  RecordDecl.cpp  RecordDecl.hpp  RecordType.cpp  RecordType.hpp  StringLiteral.cpp  StringLiteral.hpp  TranslationUnitDecl.cpp  TranslationUnitDecl.hpp  (+10 more)
Source/Cache/: Cache.cpp  Cache.hpp  Element.hpp  Entry.hpp  Inclusion.hpp
Source/Core/: Clang.cpp  Clang.hpp  CommandLine.cpp  CommandLine.hpp  File.cpp  File.hpp  Json.hpp  Logger.hpp  Position.cpp  Position.hpp  Range.hpp  Sets.cpp  Sets.hpp  ShadingLanguage.cpp  ShadingLanguage.hpp  Standard.cpp  Standard.hpp  Threadpool.cpp  Threadpool.hpp
Source/Parser/: Parser.cpp  Parser.hpp
Source/WGSL/: PrimitiveTranslation.cpp  PrimitiveTranslation.hpp
