cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
set(CMAKE_CXX_EXTENSIONS off)
project(Rebecca)
message(STATUS "Building on ${CMAKE_BUILD_TYPE} mode...")
add_executable(Rebecca)
if(WIN32)
    target_compile_definitions(Rebecca PRIVATE rebecca_windows=)
endif()
target_compile_definitions(Rebecca PRIVATE rebecca_major=0 rebecca_middle=0 rebecca_minor=1)
if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    target_compile_definitions(Rebecca PRIVATE rebecca_debug=)
    target_compile_options(Rebecca PRIVATE -g -Werror -Wall -Wextra -Wpedantic -fno-exceptions -fno-rtti)
    target_link_options(Rebecca PRIVATE -g)
else()
    target_compile_options(Rebecca PRIVATE -Werror -Wall -Wextra -Wpedantic -O3 -fno-exceptions -fno-rtti -flto=full)
    target_link_options(Rebecca PRIVATE -flto=full)
endif()
target_compile_features(Rebecca PRIVATE cxx_std_23)
file(GLOB_RECURSE CppSources "Source/**.cpp")
target_sources(Rebecca PRIVATE ${CppSources})